# sentencepiece

./: .gitignore  .gitmodules  LICENSE  README.md  dune-project
lib/: bindings.cpp  dune  sentencepiece.ml  sentencepiece.mli
lib/include/: dune
test/: dune  test.ml
